@@ -4950,7 +4950,8 @@ sub parseMsg {
 			$player->{lv} = $lv;
 			$player->{pos} = {%coords};
 			$player->{pos_to} = {%coords};
-			debug "Player Exists: ".$player->name." ($player->{binID}) $sex_lut{$player->{sex}} $jobs_lut{$player->{jobID}}\n", "parseMsg_presence/player", 1;
+			my $domain = existsInList($config{friendlyAID}, unpack("L1", $player->{ID})) ? 'parseMsg_presence' : 'parseMsg_presence/player';
+			debug "Player Exists: ".$player->name." ($player->{binID}) $sex_lut{$player->{sex}} $jobs_lut{$player->{jobID}}\n", $domain, 1;
 			setStatus($ID,$param1,$param2,$param3);
 
 			objectAdded('player', $ID, $player) if ($added);
@@ -5147,7 +5148,8 @@ sub parseMsg {
 				$players{$ID}{'jobID'} = $type;
 				$players{$ID}{'nameID'} = unpack("L1", $ID);
 				$players{$ID}{'binID'} = binFind(\@playersID, $ID);
-				debug "Player Appeared: ".$players{$ID}->name." ($players{$ID}{'binID'}) $sex_lut{$sex} $jobs_lut{$type}\n", "parseMsg_presence/player";
+				my $domain = existsInList($config{friendlyAID}, unpack("L1", $player->{ID})) ? 'parseMsg_presence' : 'parseMsg_presence/player';
+				debug "Player Appeared: ".$players{$ID}->name." ($players{$ID}{'binID'}) $sex_lut{$sex} $jobs_lut{$type}\n", $domain;
 				$added = 1;
 			}
 
